fix: md highlight in dark mode

--- a/src/styles/md.css
+++ b/src/styles/md.css
@@ -134,4 +134,7 @@ html.dark .md-blog {
   --prism-line-number-gutter: #eeeeee;
   --prism-line-highlight-background: #444444;
   --prism-selection-background: #444444;
+  --prism-selector: #dddddd;
+  --prism-interpolation: #dddddd;
+  --prism-constant: #dddddd;
 }
